fix(topbar): wrong z-index

--- a/src/components/topbar/topbar.module.css
+++ b/src/components/topbar/topbar.module.css
@@ -35,7 +35,7 @@
   background-color: var(--background);
   white-space: nowrap;
   line-height: normal;
-
+  z-index: 9999;
 }
 
 .subscription {
